@@ -1,67 +1,49 @@
-require File.dirname(__FILE__) + '/../test_helper'
-require 'users_controller'
+require 'test_helper'
 
-# Re-raise errors caught by the controller.
-class UsersController; def rescue_action(e) raise e end; end
-
-class UsersControllerTest < Test::Unit::TestCase
-  # Be sure to include AuthenticatedTestHelper in test/test_helper.rb instead
-  # Then, you can remove it from this and the units test.
-  include AuthenticatedTestHelper
-
-  fixtures :users
-
-  def setup
-    @controller = UsersController.new
-    @request    = ActionController::TestRequest.new
-    @response   = ActionController::TestResponse.new
+class UsersControllerTest < ActionController::TestCase
+  setup do
+    @user = users(:one)
   end
 
-  def test_should_allow_signup
-    assert_difference 'Users.count' do
-      create_users
-      assert_response :redirect
-    end
+  test "should get index" do
+    get :index
+    assert_response :success
+    assert_not_nil assigns(:users)
   end
 
-  def test_should_require_login_on_signup
-    assert_no_difference 'Users.count' do
-      create_users(:login => nil)
-      assert assigns(:users).errors.on(:login)
-      assert_response :success
-    end
+  test "should get new" do
+    get :new
+    assert_response :success
   end
 
-  def test_should_require_password_on_signup
-    assert_no_difference 'Users.count' do
-      create_users(:password => nil)
-      assert assigns(:users).errors.on(:password)
-      assert_response :success
+  test "should create user" do
+    assert_difference('User.count') do
+      post :create, user: @user.attributes
     end
+
+    assert_redirected_to user_path(assigns(:user))
   end
 
-  def test_should_require_password_confirmation_on_signup
-    assert_no_difference 'Users.count' do
-      create_users(:password_confirmation => nil)
-      assert assigns(:users).errors.on(:password_confirmation)
-      assert_response :success
-    end
+  test "should show user" do
+    get :show, id: @user.to_param
+    assert_response :success
   end
 
-  def test_should_require_email_on_signup
-    assert_no_difference 'Users.count' do
-      create_users(:email => nil)
-      assert assigns(:users).errors.on(:email)
-      assert_response :success
-    end
+  test "should get edit" do
+    get :edit, id: @user.to_param
+    assert_response :success
   end
-  
 
-  
+  test "should update user" do
+    put :update, id: @user.to_param, user: @user.attributes
+    assert_redirected_to user_path(assigns(:user))
+  end
 
-  protected
-    def create_users(options = {})
-      post :create, :users => { :login => 'quire', :email => 'quire@example.com',
-        :password => 'quire', :password_confirmation => 'quire' }.merge(options)
+  test "should destroy user" do
+    assert_difference('User.count', -1) do
+      delete :destroy, id: @user.to_param
     end
+
+    assert_redirected_to users_path
+  end
 end
